fix button submit on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,9 @@ html {
     display: inline-block;
     margin-top: 15px;
     border: none;
+    text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
